set loopHorizontal to false

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -71,14 +71,15 @@
 <script type="text/javascript">
     new fullpage("#fullPage", {
         autoScrolling: true,
-        // navigation: true,
         credits: { enabled: false },
         recordHistory: false,
         controlArrows: false,
         slidesNavigation: true,
         scrollHorizontally: true,
-        continuousHorizontal: true,
         dragAndMove: true,
+        // scrollOverflow: false,
+        loopHorizontal: false
+
 
     })
 </script>
