--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -17,6 +17,12 @@
         href="https://fonts.googleapis.com/css2?family=Finlandica&family=Anonymous+Pro&family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,500;8..144,700;8..144,800;8..144,900&display=swap"
         rel="stylesheet">
 
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/fav/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/fav/favicon-16x16.png">
+        <link rel="manifest" href="images/fav/site.webmanifest">
+
     <link rel="stylesheet" href="css/nav.css">
 
     <link rel="stylesheet" href="css/projects.css">
