--- a/views/404.ejs
+++ b/views/404.ejs
@@ -83,7 +83,7 @@
         <div id="" class=" home">
             <div class="container container-fluid home-every">
                 <div class="home-body">
-                    <h1>Page not found</h1>
+                    <h1>Page not found.</h1>
                 </div>
 
                 <div class="home-skills">
