--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Ndujekwu Ugochukwu. Backend Developer. Undergraduate. Backend Developer Portfolio Backend Developer Typical Portfolio">
+    <meta name="author" content="Ndujekwu Ugochukwu Peter">
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Ugochukwu's Portfolio">
+    <meta property="og:description" content="Backend Developer">
+    <meta property="og:image"
+        content='https://avatars.githubusercontent.com/u/92054718?s=400&u=8e78c26006a3e8e25e2cb5413599b766f24597ce&v=4'>
+
+    <meta property="profile:first_name" content="Ugochukwu">
+    <meta property="profile:last_name" content="Ndujekwu">
+    <meta name="theme-color" content="#131313">
 
     <script src="https://kit.fontawesome.com/ae58067270.js" crossorigin="anonymous"></script>
 
@@ -71,7 +83,7 @@
                                 <p>
                                     Currently, I'm also an undergraduate of the University of Lagos and I study
                                     Electrical and Electronics Engineering.
-                       
+
                                 </p>
                             </div>
                         </div>
