--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
         content="Ndujekwu Ugochukwu. Backend Developer. Undergraduate. Backend Developer Portfolio Backend Developer Typical Portfolio">
     <meta name="author" content="Ndujekwu Ugochukwu Peter">
     <meta property="og:type" content="profile">
-    <meta property="og:title" content="Ugochukwu's Portfolio">
-    <meta property="og:description" content="Backend Developer">
+    <meta property="og:title" content="Ugochukwu Ndujekwu">
+    <meta property="og:description" content="Backend Developer | Nodejs | MongoDB">
     <meta property="og:image"
         content='https://avatars.githubusercontent.com/u/92054718?s=400&u=8e78c26006a3e8e25e2cb5413599b766f24597ce&v=4'>
 
