--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="col-md-6 f-col">
                                 <img class="circle-img"
-                                    src="https://thumbs.dreamstime.com/b/programmer-people-concept-use-laptop-programming-code-program-icon-spreading-modern-flat-style-vector-173918729.jpg-"
+                                    src="https://avatars.githubusercontent.com/u/92054718?s=400&u=8e78c26006a3e8e25e2cb5413599b766f24597ce&v=4"
                                     alt="" />
                             </div>
                             <div class="col-md-6 s-col">
