--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
                         </div>
 
                         <div class="home-skills">
-                            <h2>Nodejs | TypeScript | MongoDB | Python </h2>
+                            <h2>Nodejs | Flask | (no)SQL | Nestjs </h2>
                         </div>
                     </div>
                 </div>
